tests/NormalTests/paczka1/fuzzy1/93693695.err
Error in line 1: Ec8MGW0dN S230 58,4
Error in line 8: Jjr8D SB16 21,6
Error in line 2: S916 S832 25,5
Error in line 4: Jjr8D S450 70,8
Error in line 11: S916 S230 49,5
Error in line 39: En2Shflfz9R S916 37,7
